Use parentNode instead of parentElement for SVG support in IE11

--- a/example.html
+++ b/example.html
@@ -110,6 +110,23 @@
               </ZUITriggeredModalForm>
             </p>
 
+            <p>
+              In an SVG:{' '}
+              <svg width="1.5em" height="1.5em" viewBox="0 0 100 100" style={{
+                verticalAlign: 'middle'
+              }}>
+                <ZUITriggeredModalForm side="right" triggerTag="g" trigger={
+                  <circle cx="50" cy="50" r="45" fill="red" stroke="none" />
+                } triggerProps={{
+                  style: {
+                    cursor: 'pointer'
+                  }
+                }}>
+                  <p>No problem!</p>
+                </ZUITriggeredModalForm>
+              </svg>
+            </p>
+
             <hr />
 
             <p>
