Update to React 14
- Adds ReactDOM
- Also ensures modal-form trigger is focusable before calling on close

--- a/example.html
+++ b/example.html
@@ -45,7 +45,8 @@
   </head>
 
   <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
+    <script src="https://fb.me/react-0.14.3.js"></script>
+    <script src="https://fb.me/react-dom-0.14.3.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser-polyfill.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js"></script>
     <script src="./anchor.js"></script>
@@ -155,7 +156,7 @@
 
       const container = document.createElement('div');
       document.body.appendChild(container);
-      React.render(<NormalDemo />, container);
+      ReactDOM.render(<NormalDemo />, container);
     </script>
   </body>
 </html>
