--- a/example.html
+++ b/example.html
@@ -45,10 +45,10 @@
   </head>
 
   <body>
-    <script src="https://fb.me/react-0.14.3.js"></script>
-    <script src="https://fb.me/react-dom-0.14.3.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser-polyfill.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js"></script>
+    <script src="./node_modules/react/dist/react.js"></script>
+    <script src="./node_modules/react-dom/dist/react-dom.js"></script>
+    <script src="./node_modules/babel-core/browser-polyfill.js"></script>
+    <script src="./node_modules/babel-core/browser.js"></script>
     <script src="./anchor.js"></script>
     <script src="./base.js"></script>
     <script src="./sticky.js"></script>
