--- a/example.html
+++ b/example.html
@@ -145,40 +145,28 @@
               <svg className="outside-viewport" width="100" height="100" viewBox="0 0 100 100" style={{
                 verticalAlign: 'middle'
               }}>
-                <ZUITriggeredModalForm side="bottom" triggerTag="g" trigger={
-                  <line 
-                    x1="30" 
-                    y1="70" 
-                    x2="300" 
-                    y2="70" 
-                    stroke="red"
-                    strokeLinecap="round"
-                    strokeWidth="4" 
-                  />
-                } triggerProps={{
-                  style: {
-                    cursor: 'pointer'
-                  }
-                }}>
-                  <p>No problem!</p>
-                </ZUITriggeredModalForm>
-                <ZUITriggeredModalForm side="right" triggerTag="g" trigger={
-                  <rect 
-                    x="-20"
-                    y="-20"
-                    width="50" 
-                    height="60" 
-                    strokeWidth="3"
-                    stroke="rgb(0,0,0)"
-                    fill="transparent"
-                   />
-                } triggerProps={{
-                  style: {
-                    cursor: 'pointer'
-                  }
-                }}>
-                  <p>This is a rectangle!</p>
-                </ZUITriggeredModalForm>
+                <g>
+                  <ZUITriggeredModalForm side="bottom" triggerTag="g" trigger={
+                    <line x1="30" y1="70" x2="300" y2="70" stroke="red" strokeLinecap="round" strokeWidth="4" />
+                  } triggerProps={{
+                    style: {
+                      cursor: 'pointer'
+                    }
+                  }}>
+                    <p>No problem!</p>
+                  </ZUITriggeredModalForm>
+                </g>
+                <g>
+                  <ZUITriggeredModalForm side="right" triggerTag="g" trigger={
+                    <rect x="-20" y="-20" width="50" height="60" strokeWidth="3" stroke="rgb(0,0,0)" fill="transparent" />
+                  } triggerProps={{
+                    style: {
+                      cursor: 'pointer'
+                    }
+                  }}>
+                    <p>This is a rectangle!</p>
+                  </ZUITriggeredModalForm>
+                </g>
               </svg>
             </p>
 
