WIP: Render popups in the same context

--- a/example.html
+++ b/example.html
@@ -53,6 +53,7 @@
     <script src="./node_modules/react-dom/dist/react-dom.js"></script>
     <script src="./node_modules/babel-core/browser-polyfill.js"></script>
     <script src="./node_modules/babel-core/browser.js"></script>
+    <script src="./root.js"></script>
     <script src="./anchor.js"></script>
     <script src="./base.js"></script>
     <script src="./sticky.js"></script>
@@ -72,82 +73,64 @@
         },
 
         render() {
-          return <div style={{
-            textAlign: 'center'
-          }}>
-            <Spacer />
+          return <ZUIModalFormRoot>
+            <div style={{
+              textAlign: 'center'
+            }}>
+              <Spacer />
 
-            <p>
-              Sticky:{' '}
-              <span style={{
-                display: 'inline-block',
-                verticalAlign: 'middle'
-              }}>
-                <button type="button" value="top" onClick={this.handleSide}>▲</button><br />
-                <button type="button" value="left" onClick={this.handleSide}>◀</button>{' '}
-                ⚓{' '}
-                {this.state.side
-                  ? <ZUIStickyModalForm ref="form" side={this.state.side} onCancel={this.handleSide}>
-                      <p>Modal form on the {this.state.side}.</p>
-                      <p>Modal form. Modal form.</p>
-                      <p>Modal form. Modal form. Modal form.</p>
-                      <p>Modal form. Modal form. Modal form. Modal form.</p>
-                      <p>
-                        <img src="https://placehold.it/500x250.png" style={{
-                          maxWidth: '100%'
-                        }} />
-                      </p>
-                    </ZUIStickyModalForm>
-                  : null}
-                <button type="button" value="right" onClick={this.handleSide}>▶</button><br />
-                <button type="button" value="bottom" onClick={this.handleSide}>▼</button>
-              </span>
-            </p>
-
-            <Spacer />
-            <hr />
-            <Spacer />
-
-            <p>
-              Triggered:{' '}
-              <ZUITriggeredModalForm trigger="Click me">
-                <p>You did it!</p>
-                <p>
-                  <ZUITriggeredModalForm side="right" trigger="Nested?" triggerProps={{
-                    autoFocus: true
-                  }}>
-                    <p>Yeah, nested.</p>
-                  </ZUITriggeredModalForm>
-                </p>
-              </ZUITriggeredModalForm>
-            </p>
-
-            <p>
-              In an SVG:{' '}
-              <svg width="1.5em" height="1.5em" viewBox="0 0 100 100" style={{
-                verticalAlign: 'middle'
-              }}>
-                <ZUITriggeredModalForm side="right" triggerTag="g" trigger={
-                  <circle cx="50" cy="50" r="45" fill="red" stroke="none" />
-                } triggerProps={{
-                  style: {
-                    cursor: 'pointer'
-                  }
+              <p>
+                Sticky:{' '}
+                <span style={{
+                  display: 'inline-block',
+                  verticalAlign: 'middle'
                 }}>
-                  <p>No problem!</p>
-                </ZUITriggeredModalForm>
-              </svg>
-            </p>
+                  <button type="button" value="top" onClick={this.handleSide}>▲</button><br />
+                  <button type="button" value="left" onClick={this.handleSide}>◀</button>{' '}
+                  ⚓{' '}
+                  {!!this.state.side
+                    ? <ZUIStickyModalForm side={this.state.side} onCancel={this.handleSide}>
+                        <p>Modal form on the {this.state.side}.</p>
+                        <p>Modal form. Modal form.</p>
+                        <p>Modal form. Modal form. Modal form.</p>
+                        <p>Modal form. Modal form. Modal form. Modal form.</p>
+                        <p>
+                          <img src="https://placehold.it/500x250.png" style={{
+                            maxWidth: '100%'
+                          }} />
+                        </p>
+                      </ZUIStickyModalForm>
+                    : null}
+                  <button type="button" value="right" onClick={this.handleSide}>▶</button><br />
+                  <button type="button" value="bottom" onClick={this.handleSide}>▼</button>
+                </span>
+              </p>
 
-            <p>
-              In an SVG element, partially outside viewport:{' '}
-              <br/>
-              <svg className="outside-viewport" width="100" height="100" viewBox="0 0 100 100" style={{
-                verticalAlign: 'middle'
-              }}>
-                <g>
-                  <ZUITriggeredModalForm side="bottom" triggerTag="g" trigger={
-                    <line x1="30" y1="70" x2="300" y2="70" stroke="red" strokeLinecap="round" strokeWidth="4" />
+              <Spacer />
+              <hr />
+              <Spacer />
+
+              <p>
+                Triggered:{' '}
+                <ZUITriggeredModalForm trigger="Click me">
+                  <p>You did it!</p>
+                  <p>
+                    <ZUITriggeredModalForm side="right" trigger="Nested?" triggerProps={{
+                      autoFocus: true
+                    }}>
+                      <p>Yeah, nested.</p>
+                    </ZUITriggeredModalForm>
+                  </p>
+                </ZUITriggeredModalForm>
+              </p>
+
+              <p>
+                In an SVG:{' '}
+                <svg width="1.5em" height="1.5em" viewBox="0 0 100 100" style={{
+                  verticalAlign: 'middle'
+                }}>
+                  <ZUITriggeredModalForm side="right" triggerTag="g" trigger={
+                    <circle cx="50" cy="50" r="45" fill="red" stroke="none" />
                   } triggerProps={{
                     style: {
                       cursor: 'pointer'
@@ -155,32 +138,52 @@
                   }}>
                     <p>No problem!</p>
                   </ZUITriggeredModalForm>
-                </g>
-                <g>
-                  <ZUITriggeredModalForm side="right" triggerTag="g" trigger={
-                    <rect x="-20" y="-20" width="50" height="60" strokeWidth="3" stroke="rgb(0,0,0)" fill="transparent" />
-                  } triggerProps={{
-                    style: {
-                      cursor: 'pointer'
-                    }
-                  }}>
-                    <p>This is a rectangle!</p>
-                  </ZUITriggeredModalForm>
-                </g>
-              </svg>
-            </p>
+                </svg>
+              </p>
 
-            <Spacer />
-            <hr />
-            <Spacer />
+              <p>
+                In an SVG element, partially outside viewport:{' '}
+                <br/>
+                <svg className="outside-viewport" width="100" height="100" viewBox="0 0 100 100" style={{
+                  verticalAlign: 'middle'
+                }}>
+                  <g>
+                    <ZUITriggeredModalForm side="bottom" triggerTag="g" trigger={
+                      <line x1="30" y1="70" x2="300" y2="70" stroke="red" strokeLinecap="round" strokeWidth="4" />
+                    } triggerProps={{
+                      style: {
+                        cursor: 'pointer'
+                      }
+                    }}>
+                      <p>No problem!</p>
+                    </ZUITriggeredModalForm>
+                  </g>
+                  <g>
+                    <ZUITriggeredModalForm side="right" triggerTag="g" trigger={
+                      <rect x="-20" y="-20" width="50" height="60" strokeWidth="3" stroke="rgb(0,0,0)" fill="transparent" />
+                    } triggerProps={{
+                      style: {
+                        cursor: 'pointer'
+                      }
+                    }}>
+                      <p>This is a rectangle!</p>
+                    </ZUITriggeredModalForm>
+                  </g>
+                </svg>
+              </p>
 
-            <p>
-              Alert:{' '}
-              <button type="button" onClick={this.showAlert}>Show it</button>
-            </p>
+              <Spacer />
+              <hr />
+              <Spacer />
 
-            <Spacer />
-          </div>;
+              <p>
+                Alert:{' '}
+                <button type="button" onClick={this.showAlert}>Show it</button>
+              </p>
+
+              <Spacer />
+            </div>
+          </ZUIModalFormRoot>;
         },
 
         handleSide(event) {
