add overflow hidden to svg element

--- a/example.html
+++ b/example.html
@@ -18,6 +18,10 @@
         }
       }
 
+      svg {
+        overflow: hidden;
+      }
+
       .modal-form-underlay {
         animation: underlay-fade 0.5s;
         background: rgba(127, 127, 127, 0.2);
