--- a/example.html
+++ b/example.html
@@ -53,8 +53,8 @@
   </head>
 
   <body>
-    <script src="./node_modules/react/dist/react.js"></script>
-    <script src="./node_modules/react-dom/dist/react-dom.js"></script>
+    <script src="./node_modules/react/umd/react.development.js"></script>
+    <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
     <script src="./node_modules/prop-types/prop-types.js"></script>
     <script src="./node_modules/create-react-class/create-react-class.js"></script>
     <script src="./node_modules/babel-core/browser-polyfill.js"></script>
