--- a/example.html
+++ b/example.html
@@ -54,8 +54,8 @@
 
   <body>
     <script src="https://unpkg.com/babel-standalone/babel.min.js"></script>
-    <script src="./node_modules/react/umd/react.development.js"></script>
-    <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/react@16.13/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16.13/umd/react-dom.development.js"></script>
     <script src="./node_modules/prop-types/prop-types.js"></script>
     <script src="./node_modules/create-react-class/create-react-class.js"></script>
     <script src="./anchor.js"></script>
