--- a/example.html
+++ b/example.html
@@ -53,12 +53,11 @@
   </head>
 
   <body>
-    <script src="./node_modules/react/umd/react.development.js"></script>
-    <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone/babel.min.js"></script>
+    <script src="https://unpkg.com/react@16.13/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16.13/umd/react-dom.development.js"></script>
     <script src="./node_modules/prop-types/prop-types.js"></script>
     <script src="./node_modules/create-react-class/create-react-class.js"></script>
-    <script src="./node_modules/babel-core/browser-polyfill.js"></script>
-    <script src="./node_modules/babel-core/browser.js"></script>
     <script src="./anchor.js"></script>
     <script src="./base.js"></script>
     <script src="./sticky.js"></script>
